# MetaGameplay

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
client/: .env.example  game.py  main.py  messages.py
client/config/: cfg.py
client/services/: aiohttp_client.py  base_api_client.py
client/services/api_client/: aiohttp_client.py  base_api_client.py
client/services/server/: client.py  schemas.py
server/: .env.example  initial_items.json  main.py
server/api/: exceptions.py
server/api/schemas/: __init__.py  item.py  user.py
server/api/v1/: api.py
server/api/v1/endpoints/: items.py  users.py
server/config/: cfg.py
server/models/: __init__.py  items.py  user.py
server/models/migrations/: env.py
server/models/migrations/versions/: fc1d91cdfe0d_base_relationships.py
server/repositories/: __init__.py  base.py  item.py  user.py
server/services/: __init__.py  base.py  item.py  user.py
server/services/cache/: base.py  decorator.py  redis_cache.py
